syntax = "proto3";
package gc.garcol.exchange.proto;
option java_outer_classname = "ClusterPayloadProto";

import "common.proto";
import "command.proto";
import "query.proto";

message Request {
  oneof payload {
    Command command = 1;
    Query query = 2;
  }
}

message CommonResponse {
  UUID correlationId = 1;
  int32 status = 2;
  int32 code = 3;
}

message Response {
  oneof payload {
    CommonResponse commandResponse = 1;
    QueryResponse queryResponse = 2;
  }
}
